# TinkoffInvestSDK

./: .gitignore  CMakeLists.txt  investapiclient.cpp
.github/workflows/: cmake-single-platform.yml
cmake/: common.cmake
samples/stream_async/: CMakeLists.txt
samples/stream_sync/: CMakeLists.txt
samples/unary/: CMakeLists.txt
services/: marketdataservice.h
